--- a/src/app/adm-home/employee-management/employee-management.component.html
+++ b/src/app/adm-home/employee-management/employee-management.component.html
@@ -32,6 +32,9 @@
                             [(ngModel)]="empGen" [virtualScroll]="false" name="empGen" formControlName="empGen"
                             pTooltip="Gender of the Employee" [ngClass]="{ 'is-invalid': submitted && f.empGen.errors }"
                             optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+                            <ng-template let-option pTemplate="item">
+                                <span>{{option.label}}</span>
+                            </ng-template>
                         </p-dropdown>
                         <div *ngIf="submitted && f.empGen.errors" class="invalid-feedback">
                             <div *ngIf="f.empGen.errors.required">Gender is required</div>
@@ -133,6 +136,9 @@
                         <p-dropdown [options]="genders" placeholder="Gender of the Employee" [virtualScroll]="false"
                             [(ngModel)]="employee.empGen" empGen pTooltip="Gender of the Employee"
                             optionLabel="displayName">
+                            <ng-template let-option pTemplate="item">
+                                <span>{{option.label}}</span>
+                            </ng-template>
                         </p-dropdown>
                     </ng-template>
                     <ng-template pTemplate="output">
