--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -131,6 +131,9 @@
                     <ng-template pTemplate="input">
                         <p-dropdown [options]="lookupDefinitions" [(ngModel)]="lookup.lookupDefName"
                             pTooltip="Lookup Definition Name" [style]="{'width':'auto', 'height':'auto'}">
+                            <ng-template let-option pTemplate="item">
+                                <span>{{option.label}}</span>
+                            </ng-template>
                         </p-dropdown>
                     </ng-template>
                     <ng-template pTemplate="output">
