--- a/src/app/emp-home/emp-home.component.html
+++ b/src/app/emp-home/emp-home.component.html
@@ -31,6 +31,9 @@
               <p-dropdown [options]="genderLookup" [(ngModel)]="employee.empGen" optionLabel="displayName"
                 optionValue="lookupValue" (onChange)="onGender($event)" pTooltip="Gender" pTooltip="Gender"
                 [style]="{'width':'auto', 'height':'auto'}">
+                <ng-template let-option pTemplate="item">
+                  <span>{{option.label}}</span>
+                </ng-template>
               </p-dropdown>
             </ng-template>
             <ng-template pTemplate="output">
